<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center_vertical"
        android:background="@drawable/ripple"
        android:paddingStart="24dp"
        android:paddingEnd="16dp"
        android:focusable="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rpm"
            style="@style/LabelTextView"/>

        <TextView
            android:id="@+id/tvRPM"
            style="@style/DataTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center_vertical"
        android:background="@drawable/ripple"
        android:paddingStart="24dp"
        android:paddingEnd="16dp"
        android:focusable="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/odometer"
            style="@style/LabelTextView"/>

        <TextView
            android:id="@+id/tvOdometer"
            style="@style/DataTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center_vertical"
        android:background="@drawable/ripple"
        android:paddingStart="24dp"
        android:paddingEnd="16dp"
        android:focusable="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/speed"
            style="@style/LabelTextView"/>

        <TextView
            android:id="@+id/tvSpeed"
            style="@style/DataTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center_vertical"
        android:background="@drawable/ripple"
        android:paddingStart="24dp"
        android:paddingEnd="16dp"
        android:focusable="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/engine_hours"
            style="@style/LabelTextView"/>

        <TextView
            android:id="@+id/tvEngineHours"
            style="@style/DataTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end" />
    </LinearLayout>

</LinearLayout>